<resources>
    <string name="app_name">App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auth_email_text">Email</string>
    <string name="auth_password_text">Password</string>
    <string name="auth_login_button_text">Login</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="user_profile">User Profile</string>
    <string name="create_user">Update User</string>
    <string name="menu_profile">Profile</string>
    <string name="user_id_text">Id:</string>
    <string name="user_name_text">Name:</string>
    <string name="user_lastName_text">LastName:</string>
    <string name="user_faculty_text">Faculty:</string>
    <string name="user_group_text">Group:</string>
    <string name="user_course_text">Course:</string>
    <string name="user_student_ticket_text">Student ticket:</string>
    <string name="user_email_text">Email:</string>
    <string name="user_phone_text">Phone:</string>
    <string name="user_role_text">Role:</string>
    <string name="user_changePassword_text">Change Password</string>
    <string name="user_oldPass_text">Old Password</string>
    <string name="user_newPass_text">New Password</string>
    <string name="user_confirmPass_text">Confirm Password</string>
    <string name="user_password_text">Password:</string>

    <string name="common_Save_text">Save</string>

    <string-array name="Subjects">
        <item>Math</item>
        <item>OOP</item>
        <item>Arcitcture</item>
    </string-array>
    <string-array name="Strudents">
        <item>Ivan Ivanov</item>
    </string-array>
</resources>